<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="VisualLintBounds">
    <View
    android:layout_width="match_parent"
    android:layout_height="40dp"/>

    <Button
        android:id="@+id/button_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        tools:ignore="VisualLintButtonSize" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="1dp"
        android:padding="8dp" />

</LinearLayout>